bin/tests/errors/sema/sema_err_continue_outside_breakable.swg
#global fileprivate

#test
{
    continue // swc-expected-error {{sema_err_continue_outside_breakable}}
}
